gitops/apps/czeq/czeq-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: czeq
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    linkerd.io/inject: enabled
